// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas del component <GifGrid /> Debe de mostrar el component correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Hola Mundo
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas del component <GifGrid /> Debe de mostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Hola Mundo
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Casa"
      url="https://localhost/casas.jpg"
    />
    <GifGridItem
      id="123"
      key="123"
      title="Casa"
      url="https://localhost/casas.jpg"
    />
  </div>
</Fragment>
`;
